// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timestamp> renders correctly with Date object 1`] = `
<span
  className="sc-bdVaJa sc-bwzfXH eVvfQY"
>
  Oct 09 2011 14:48:59
</span>
`;

exports[`<Timestamp> renders correctly with Date object and 'YBt' mask 1`] = `
<span
  className="sc-bdVaJa sc-bwzfXH eVvfQY"
>
  2011 October 14:48:59
</span>
`;

exports[`<Timestamp> renders correctly with ISO8061 string 1`] = `
<span
  className="sc-bdVaJa sc-bwzfXH eVvfQY"
>
  Oct 09 2011 14:48:59
</span>
`;

exports[`<Timestamp> renders correctly with ISO8061 string and 'YBt' mask 1`] = `
<span
  className="sc-bdVaJa sc-bwzfXH eVvfQY"
>
  2011 October 14:48:59
</span>
`;
